--- a/garden-shop/dev/components/footer/footer.html
+++ b/garden-shop/dev/components/footer/footer.html
@@ -2,11 +2,11 @@
 <footer class="footer">
     <div class="container">
         <div class="footer__wrapper">
-            <nav class="footer__nav">
-                <ul class="footer__nav-list">
-                    <li class="footer__nav-item footer__nav-item_has-children">
-                        <a class="footer__nav-link footer__nav-link_lvl1" href="">Покупателям</a>
-                        <ul class="footer__subnav">
+            <nav class="footer__nav ">
+                <ul class="footer__nav-list accordion_v1">
+                    <li class="footer__nav-item footer__nav-item_has-children a-container">
+                        <a class="footer__nav-link footer__nav-link_lvl1 a-btn" href="">Покупателям</a>
+                        <ul class="footer__subnav a-panel">
                             <li><a class="footer__nav-link footer__nav-link_lvl2" href="#">Минитракторы</a></li>
                             <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Тракторы</a></li>
                             <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Мотоблоки</a></li>
@@ -18,9 +18,9 @@
                                     учет</a></li>
                         </ul>
                     </li>
-                    <li class="footer__nav-item footer__nav-item_has-children">
-                        <a class="footer__nav-link footer__nav-link_lvl1" href="#">Для бизнеса</a>
-                        <ul class="footer__subnav">
+                    <li class="footer__nav-item footer__nav-item_has-children a-container">
+                        <a class="footer__nav-link footer__nav-link_lvl1 a-btn" href="#">Для бизнеса</a>
+                        <ul class="footer__subnav a-panel">
                             <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Навесное оборудование</a></li>
                             <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Минитракторы</a></li>
                             <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Тракторы</a></li>
@@ -28,9 +28,9 @@
 
                         </ul>
                     </li>
-                    <li class="footer__nav-item footer__nav-item_has-children">
-                        <a class="footer__nav-link footer__nav-link_lvl1" href="">О компании</a>
-                        <ul class="footer__subnav">
+                    <li class="footer__nav-item footer__nav-item_has-children a-container">
+                        <a class="footer__nav-link footer__nav-link_lvl1 a-btn" href="">О компании</a>
+                        <ul class="footer__subnav a-panel">
                             <li><a class="footer__nav-link footer__nav-link_lvl2" href="">СКАУТ ТМ</a></li>
                             <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Франшиза</a></li>
                             <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Контакты</a></li>
@@ -40,9 +40,9 @@
                             <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Видео</a></li>
                         </ul>
                     </li>
-                    <li class="footer__nav-item footer__nav-item_has-children">
-                        <a class="footer__nav-link footer__nav-link_lvl1" href="">Блог</a>
-                        <ul class="footer__subnav">
+                    <li class="footer__nav-item footer__nav-item_has-children a-container">
+                        <a class="footer__nav-link footer__nav-link_lvl1 a-btn" href="">Блог</a>
+                        <ul class="footer__subnav a-panel">
                             <li><a class="footer__nav-link footer__nav-link_lvl2" href="">СКАУТ ТМ</a></li>
                             <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Франшиза</a></li>
                             <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Контакты</a></li>
