--- a/garden-shop/release/components/catalog-list/catalog-list.html
+++ b/garden-shop/release/components/catalog-list/catalog-list.html
@@ -1,10 +1,131 @@
 <section class="section catalog-list">
     <div class="container">
-        <div class="catalog-list__title title" style="background-image: url(./images/icons/con1.svg);">
+        <div class="catalog-list__title orange-text title" style="background-image: url(./images/icons/con1.svg);">
             @@title
         </div>
-        <div class="catalog-list__wrapper">
-
+        <div class="catalog-list__wrapper accordion_v1">
+            <div class="catalog-list__filter a-container">
+                <div class="catalog-list__filter-title bold a-btn">По бренду</div>
+                <ul class="catalog-list__filter-list a-panel">
+                    <li class="catalog-list__filter-item">
+                        <a href="" class="catalog-list__filter-link">СКАУТ | SCOUT</a>
+                    </li>
+                    <li class="catalog-list__filter-item">
+                        <a href="" class="catalog-list__filter-link">СКАУТ | SCOUT</a>
+                    </li>
+                    <li class="catalog-list__filter-item">
+                        <a href="" class="catalog-list__filter-link">СКАУТ | SCOUT</a>
+                    </li>
+                    <li class="catalog-list__filter-item">
+                        <a href="" class="catalog-list__filter-link">СКАУТ | SCOUT</a>
+                    </li>
+                    <li class="catalog-list__filter-item">
+                        <a href="" class="catalog-list__filter-link">СКАУТ | SCOUT</a>
+                    </li>
+                    <li class="catalog-list__filter-item">
+                        <a href="" class="catalog-list__filter-link">СКАУТ | SCOUT</a>
+                    </li>
+                    <li class="catalog-list__filter-item">
+                        <a href="" class="catalog-list__filter-link">СКАУТ | SCOUT</a>
+                    </li>
+                    <li class="catalog-list__filter-item">
+                        <a href="" class="catalog-list__filter-link">СКАУТ | SCOUT</a>
+                    </li>
+                    <li class="catalog-list__filter-item">
+                        <a href="" class="catalog-list__filter-link">СКАУТ | SCOUT</a>
+                    </li>
+                    <li class="catalog-list__filter-item">
+                        <a href="" class="catalog-list__filter-link">СКАУТ | SCOUT</a>
+                    </li>
+                    <li class="catalog-list__filter-item">
+                        <a href="" class="catalog-list__filter-link">СКАУТ | SCOUT</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="catalog-list__filter a-container">
+                <div class="catalog-list__filter-title bold a-btn">По назначению</div>
+                <ul class="catalog-list__filter-list a-panel">
+                    <li class="catalog-list__filter-item">
+                        <a href="" class="catalog-list__filter-link">СКАУТ | SCOUT</a>
+                    </li>
+                    <li class="catalog-list__filter-item">
+                        <a href="" class="catalog-list__filter-link">СКАУТ | SCOUT</a>
+                    </li>
+                    <li class="catalog-list__filter-item">
+                        <a href="" class="catalog-list__filter-link">СКАУТ | SCOUT</a>
+                    </li>
+                    <li class="catalog-list__filter-item">
+                        <a href="" class="catalog-list__filter-link">СКАУТ | SCOUT</a>
+                    </li>
+                    <li class="catalog-list__filter-item">
+                        <a href="" class="catalog-list__filter-link">СКАУТ | SCOUT</a>
+                    </li>
+                    <li class="catalog-list__filter-item">
+                        <a href="" class="catalog-list__filter-link">СКАУТ | SCOUT</a>
+                    </li>
+                    <li class="catalog-list__filter-item">
+                        <a href="" class="catalog-list__filter-link">СКАУТ | SCOUT</a>
+                    </li>
+                    <li class="catalog-list__filter-item">
+                        <a href="" class="catalog-list__filter-link">СКАУТ | SCOUT</a>
+                    </li>
+                    <li class="catalog-list__filter-item">
+                        <a href="" class="catalog-list__filter-link">СКАУТ | SCOUT</a>
+                    </li>
+                    <li class="catalog-list__filter-item">
+                        <a href="" class="catalog-list__filter-link">СКАУТ | SCOUT</a>
+                    </li>
+                    <li class="catalog-list__filter-item">
+                        <a href="" class="catalog-list__filter-link">СКАУТ | SCOUT</a>
+                    </li>
+                    <li class="catalog-list__filter-item">
+                        <a href="" class="catalog-list__filter-link">СКАУТ | SCOUT</a>
+                    </li>
+                    <li class="catalog-list__filter-item">
+                        <a href="" class="catalog-list__filter-link">СКАУТ | SCOUT</a>
+                    </li>
+                    <li class="catalog-list__filter-item">
+                        <a href="" class="catalog-list__filter-link">СКАУТ | SCOUT</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="catalog-list__filter a-container">
+                <div class="catalog-list__filter-title bold a-btn">По типу</div>
+                <ul class="catalog-list__filter-list a-panel">
+                    <li class="catalog-list__filter-item">
+                        <a href="" class="catalog-list__filter-link">СКАУТ | SCOUT</a>
+                    </li>
+                    <li class="catalog-list__filter-item">
+                        <a href="" class="catalog-list__filter-link">СКАУТ | SCOUT</a>
+                    </li>
+                    <li class="catalog-list__filter-item">
+                        <a href="" class="catalog-list__filter-link">СКАУТ | SCOUT</a>
+                    </li>
+                    <li class="catalog-list__filter-item">
+                        <a href="" class="catalog-list__filter-link">СКАУТ | SCOUT</a>
+                    </li>
+                    <li class="catalog-list__filter-item">
+                        <a href="" class="catalog-list__filter-link">СКАУТ | SCOUT</a>
+                    </li>
+                    <li class="catalog-list__filter-item">
+                        <a href="" class="catalog-list__filter-link">СКАУТ | SCOUT</a>
+                    </li>
+                    <li class="catalog-list__filter-item">
+                        <a href="" class="catalog-list__filter-link">СКАУТ | SCOUT</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="catalog-list__filter a-container">
+                <div class="catalog-list__filter-title bold a-btn">Страна производства</div>
+                <ul class="catalog-list__filter-list a-panel">
+                    <li class="catalog-list__filter-item">
+                        <a href="" class="catalog-list__filter-link">СКАУТ | SCOUT</a>
+                    </li>
+                    <li class="catalog-list__filter-item">
+                        <a href="" class="catalog-list__filter-link">СКАУТ | SCOUT</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
 </section>
