--- a/garden-shop/release/components/footer/footer.css
+++ b/garden-shop/release/components/footer/footer.css
@@ -202,14 +202,14 @@
     transform: translateY(-50%);
     transition: all ease 0.5s;
   }
-  .footer__nav-item_open .footer__subnav {
-    margin-top: 10px;
-  }
-  .footer__nav-item_open .footer__nav-link_lvl1::after {
-    transform: translateY(-50%) rotate(180deg);
-  }
   .footer__dev-links {
     display: flex;
     flex-direction: column;
+  }
+  .accordion_v1 .a-container_open .footer__subnav {
+    margin-top: 10px;
+  }
+  .accordion_v1 .a-container_open .footer__nav-link_lvl1::after {
+    transform: translateY(-50%) rotate(180deg);
   }
 }
