--- a/garden-shop/dev/components/catalog-list/catalog-list.html
+++ b/garden-shop/dev/components/catalog-list/catalog-list.html
@@ -3,10 +3,10 @@
         <div class="catalog-list__title orange-text title" style="background-image: url(./images/icons/con1.svg);">
             @@title
         </div>
-        <div class="catalog-list__wrapper">
-            <div class="catalog-list__filter">
-                <div class="catalog-list__filter-title bold">По бренду</div>
-                <ul class="catalog-list__filter-list">
+        <div class="catalog-list__wrapper accordion_v1">
+            <div class="catalog-list__filter a-container">
+                <div class="catalog-list__filter-title bold a-btn">По бренду</div>
+                <ul class="catalog-list__filter-list a-panel">
                     <li class="catalog-list__filter-item">
                         <a href="" class="catalog-list__filter-link">СКАУТ | SCOUT</a>
                     </li>
@@ -42,9 +42,9 @@
                     </li>
                 </ul>
             </div>
-            <div class="catalog-list__filter">
-                <div class="catalog-list__filter-title bold">По назначению</div>
-                <ul class="catalog-list__filter-list">
+            <div class="catalog-list__filter a-container">
+                <div class="catalog-list__filter-title bold a-btn">По назначению</div>
+                <ul class="catalog-list__filter-list a-panel">
                     <li class="catalog-list__filter-item">
                         <a href="" class="catalog-list__filter-link">СКАУТ | SCOUT</a>
                     </li>
@@ -89,9 +89,9 @@
                     </li>
                 </ul>
             </div>
-            <div class="catalog-list__filter">
-                <div class="catalog-list__filter-title bold">По типу</div>
-                <ul class="catalog-list__filter-list">
+            <div class="catalog-list__filter a-container">
+                <div class="catalog-list__filter-title bold a-btn">По типу</div>
+                <ul class="catalog-list__filter-list a-panel">
                     <li class="catalog-list__filter-item">
                         <a href="" class="catalog-list__filter-link">СКАУТ | SCOUT</a>
                     </li>
@@ -115,9 +115,9 @@
                     </li>
                 </ul>
             </div>
-            <div class="catalog-list__filter">
-                <div class="catalog-list__filter-title bold">Страна производства</div>
-                <ul class="catalog-list__filter-list">
+            <div class="catalog-list__filter a-container">
+                <div class="catalog-list__filter-title bold a-btn">Страна производства</div>
+                <ul class="catalog-list__filter-list a-panel">
                     <li class="catalog-list__filter-item">
                         <a href="" class="catalog-list__filter-link">СКАУТ | SCOUT</a>
                     </li>
