--- a/garden-shop/release/components/header/header.html
+++ b/garden-shop/release/components/header/header.html
@@ -14,11 +14,13 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css">
 	<link rel="stylesheet" href="css/reset.css" />
+	<link rel="stylesheet" href="css/rSlider.min.css" />
 	<link rel="stylesheet" href="css/style-result.css" />
 
 	<script src="https://unpkg.com/imask"></script>
 	<script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+	<script src="./js/rSlider.min.js"></script>
 	<script src="./js/main-result.js"></script>
 
 	<title>@@title</title>
