--- a/garden-shop/dev/components/card/card.scss
+++ b/garden-shop/dev/components/card/card.scss
@@ -267,6 +267,7 @@
                 gap: 20px;
                 max-width: 214px;
                 width: 100%;
+                margin-top: 30px;
             }
             &__deliver-list {
                 margin-top: 10px;
@@ -278,6 +279,9 @@
             &__gallery {
                 max-width: 280px;
                 height: 227px;
+            }
+            &__order {
+                max-width: 260px;
             }
         }
     }
@@ -296,6 +300,14 @@
                     height: 100%;
                 }
             }
+        }
+    }
+}
+
+@media (max-width: 1400px) {
+    .card {
+        &_wide {
+            display: none;
         }
     }
 }
