--- a/garden-shop/release/components/card/card.css
+++ b/garden-shop/release/components/card/card.css
@@ -266,6 +266,7 @@
   gap: 20px;
   max-width: 214px;
   width: 100%;
+  margin-top: 30px;
 }
 .card_wide .card__deliver-list {
   margin-top: 10px;
@@ -278,6 +279,9 @@
   max-width: 280px;
   height: 227px;
 }
+.card_wide .card__order {
+  max-width: 260px;
+}
 
 @media (min-width: 768px) {
   .card_kit .card__mid {
@@ -287,6 +291,11 @@
     gap: 10px;
     margin-bottom: 10px;
     height: 100%;
+  }
+}
+@media (max-width: 1400px) {
+  .card_wide {
+    display: none;
   }
 }
 @media (max-width: 768px) {
