--- a/garden-shop/release/css/style-result.css
+++ b/garden-shop/release/css/style-result.css
@@ -1337,6 +1337,7 @@ body {
   gap: 20px;
   max-width: 214px;
   width: 100%;
+  margin-top: 30px;
 }
 
 .card_wide .card__deliver-list {
@@ -1351,6 +1352,10 @@ body {
 .card_wide .card__gallery {
   max-width: 280px;
   height: 227px;
+}
+
+.card_wide .card__order {
+  max-width: 260px;
 }
 
 .catalog__wrapper {
@@ -2355,8 +2360,16 @@ body {
 }
 
 @media (max-width: 1400px) {
+  .card_wide {
+    display: none;
+  }
+
   .catalog__list {
     grid-template-columns: 1fr 1fr;
+  }
+
+  .catalog__template {
+    display: none;
   }
 }
 
@@ -2454,10 +2467,6 @@ body {
   }
 
   .catalog__filter-wrapper::-webkit-scrollbar {
-    display: none;
-  }
-
-  .catalog__template {
     display: none;
   }
 
